--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -54,7 +54,7 @@ Typesetting was carried out entirely in \XeLaTeX. The body text is set in Consta
 \newpage
 \tableofcontents*
 
-\chapter*{How to use this book}
+\chapter*{How to Use This Book}
 
 This book has been designed for use in conjunction with the University of Adelaide course \textsc{phil} 1110 \emph{Introduction to Logic}. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
 	\item \forallx\ is divided into seven chapters, each further divided into sections and subsections. The sections are continuously numbered. \begin{itemize}
