--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -580,7 +580,7 @@ Explain why on page \pageref{quant.tcs.precise} we did not give the truth condit
 
 
 
-\chapter{Semantic concepts}\label{FOL.semantics}
+\chapter{Semantic Concepts}\label{FOL.semantics}
 Offering a precise definition of truth in \FOL\ was more than a little fiddly. But now that we are done, we can define various central logical notions. These will look very similar to the definitions we offered for \TFL. However, remember that they concern \emph{interpretations}, rather than valuations. 
 
 
@@ -809,7 +809,7 @@ Show that the following arguments are invalid:
 \item $\forall x(Dx \eif \exists y Tyx) \ttherefore \exists y \exists z\ \enot y= z$
 \end{earg}
 
-\chapter{Reasoning about all interpretations: demonstrating inconsistency and validity}\label{s:All.Interp}
+\chapter{Reasoning about All Interpretations: Demonstrating Inconsistency and Validity}\label{s:All.Interp}
 
 \section{Logical truths and contradictions}
 We can show that a sentence is \emph{not} a logical truth just by providing one carefully specified interpretation: an interpretation in which the sentence is false. To show that something is a logical truth, on the other hand, it would not be enough to construct ten, one hundred, or even a thousand interpretations in which the sentence is true. A sentence is only a logical truth if it is true in \emph{every} interpretation, and there are infinitely many interpretations. We need to reason about all of them, and we cannot do this by dealing with them one by one!
