--- a/forallx-adl-notation.tex
+++ b/forallx-adl-notation.tex
@@ -5,7 +5,7 @@
 
 % Æ: made lots of changes of detail because of our choice of name of languages, and added a couple of other pieces of terminology to what is in effect an impromptu logic thesaurus.
 
-\chapter{Alternative terminology and notation}\label{app.notation}
+\chapter{Alternative Terminology and Notation}\label{app.notation}
 
 \section*{Alternative terminology}
 \paragraph{Sentential logic.} The study of \TFL\ goes by other names. The name we have given it – sentential logic – derives from the fact that it deals with whole sentences as its most basic building blocks. Other features motivate different names.  Sometimes it is called \emph{truth-functional logic}, because it deals only with assignments of truth and falsity to sentences, and its connectives are all truth-functional. Sometimes it is called \emph{propositional logic}, which strikes me as a misleading choice. This may sometimes be innocent, as some people  use `proposition' to mean `sentence'. However, noting that different sentences can mean the same thing, many people use the term  `proposition' as a useful way of referring to the meaning of a sentence, what that sentence expresses. In \emph{this} sense of `proposition', `propositional logic' is not a good name for the study of \TFL, since synonymous but not logically equivalent sentences like `Vixens are bold' and `Female foxes are bold' will be logically distinguished even though they express the same proposition.
