--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -1,9 +1,9 @@
 %!TEX root = forallxadl.tex
-\part{Natural deduction for \FOL}
+\part{Natural Deduction for \FOL}
 \label{ch.NDFOL}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 
-\chapter{Basic rules for \textnormal{\FOL}}\label{s:BasicFOL}
+\chapter{Basic Rules for \textnormal{\FOL}}\label{s:BasicFOL}
 
 \FOL\ makes use of all of the connectives of \TFL. So proofs in \FOL\ will use all of the basic and derived rules from chapter \ref{ch.NDTFL}. We shall also use the proof-theoretic notions (particularly, the symbol `$\proves$') introduced in that chapter. 
 
@@ -554,7 +554,7 @@ For each of the following arguments: If it is valid in \FOL, give a proof. If it
 \end{earg}
 
 
-\chapter{Derived rules for \textnormal{\FOL}}\label{s:CQ}
+\chapter{Derived Rules for \textnormal{\FOL}}\label{s:CQ}
 
 In this section, we shall add some additional rules to the basic rules of the previous section. These govern the interaction of quantifiers and negation. But they are no substantive addition to our basic rules: for each of the proposed additions, it can be shown that their role in any proof can be wholly emulated by some suitable applications of our basic rules from §\ref{s:BasicFOL}. (The point here is as in §\ref{s:Derived}.)
  
@@ -716,7 +716,7 @@ Offer proofs which justify the addition of the other CQ rules as derived rules.
 
 
 
-\chapter{Rules for identity}\label{ch.identity}
+\chapter{Rules for Identity}\label{ch.identity}
 
 \section{Identity introduction}\label{idint}
 In §\ref{s:Interpretations}, I mentioned the philosophically contentious thesis of the \emph{identity of indiscernibles}. This is the claim that objects which are indiscernible in every way – which means, for us, that exactly the same predicates are true of both objects – are, in fact, identical to each other. I also mentioned that in \FOL, this thesis is not true. There are interpretations in which, for each property denoted by any predicate of the language, two distinct objects either both have that property, or both lack that property. They may well differ on some property `in reality', but there is nothing in \FOL\ which guarantees that that property is assigned as the interpretation of any predicate of the language. 
@@ -897,7 +897,7 @@ And offer a proof of it.
 \problempart
 What condition on the directed graph of a relation corresponds to that relation being an equivalence relation?
 
-\chapter{Proof-theoretic concepts and semantic concepts}\label{sec:soundcomp}
+\chapter{Proof-Theoretic Concepts and Semantic Concepts}\label{sec:soundcomp}
 We have used two different turnstiles in this book.  This:
 $$\meta{A}_1, \meta{A}_2, …, \meta{A}_n \proves \meta{C}$$
 means that there is some proof which starts with assumptions $\meta{A}_1, \meta{A}_2, …, \meta{A}_n$ and ends with $\meta{C}$ (and no undischarged assumptions other than $\meta{A}_1, \meta{A}_2, …, \meta{A}_n$). This is a \emph{proof-theoretic notion}.
