--- a/forallx-adl-quickreference.tex
+++ b/forallx-adl-quickreference.tex
@@ -1,5 +1,5 @@
 %!TEX root = forallxadl.tex
-\chapter[Quick reference]{Quick reference}\label{ch.qr}
+\chapter[Quick Reference]{Quick Reference}\label{ch.qr}
 %\pagestyle{plain}
 \section*{Schematic Truth Tables} ~\\
 \label{app.SchematicTTs}
