--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -1,9 +1,9 @@
 %!TEX root = forallxadl.tex
-\part{The Language of Sentential logic}
+\part{The Language of Sentential Logic}
 \label{ch.TFL}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 
-\chapter{First steps to symbolisation}\label{s:firststeps}
+\chapter{First Steps to Symbolisation}\label{s:firststeps}
 
 \section{Argument structure}\label{s:ValidityInVirtueOfForm}
 Consider this argument:
@@ -593,7 +593,7 @@ What is the scope of each connective in the sentence
 $$\bigl( (H \eif I) \eor (I \eif H) \bigr) \eand (J \eor K)$$
 
 
-\chapter{Use and mention}\label{s:UseMention}
+\chapter{Use and Mention}\label{s:UseMention}
 In this chapter, I have talked a lot \emph{about} sentences. So I need to pause to explain an important, and very general, point.
 
 \section{Quotation conventions}
