--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -1,12 +1,12 @@
 %!TEX root = forallxadl.tex
-\part{Truth tables}
+\part{Truth Tables}
 \label{ch.TruthTables}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 
  
 
 
-\chapter{Truth-functional connectives}\label{s:TruthFunctionality}
+\chapter{Truth-Functional Connectives}\label{s:TruthFunctionality}
 
 \section{The idea of truth-functionality}
 So much for the grammar or syntax of \TFL. We turn now to the meaning of \TFL\ sentences. For technical reasons, it is best to  start with the intended intepretation of the connectives. 
@@ -198,7 +198,7 @@ In fact there are even difficulties with indicatives in \TFL. I shall say a litt
 }
 
 
-\chapter{Complete truth tables}\label{s:CompleteTruthTables}
+\chapter{Complete Truth Tables}\label{s:CompleteTruthTables}
 
 \section{Valuations}\label{s:valuations}
 
@@ -348,7 +348,7 @@ Offer complete truth tables for each of the following:
 If you want additional practice, you can construct truth tables for any of the sentences and arguments in the exercises for the previous chapter.
 
 
-\chapter{Semantic concepts}\label{s:Semantic.concepts}
+\chapter{Semantic Concepts}\label{s:Semantic.concepts}
 In §\ref{s:valuations}, we introduced the idea of a valuation and showed how to determine the truth value of any \TFL\ sentence on any valuation using a truth table in the remainder of the chapter. In this section, we shall introduce some related ideas, and show how to use truth tables to test whether or not they apply.
 
 
@@ -495,7 +495,7 @@ Use truth tables to determine whether these sentences are jointly consistent, or
 \end{earg}
 
 
-\chapter{Entailment and validity}\label{c:entvalid}
+\chapter{Entailment and Validity}\label{c:entvalid}
 
 \section{Entailment}\label{s:entailmentdt}
 
@@ -672,7 +672,7 @@ Is this principle correct? Explain your answer.
 
 
 
-\chapter{Truth table shortcuts}\label{s:shortcuts}
+\chapter{Truth Table Shortcuts}\label{s:shortcuts}
 With practice, you will quickly become adept at filling out truth tables. In this section, I want to give you some permissible shortcuts to help you along the way. 
 
 \section{Working through truth tables}
@@ -848,7 +848,7 @@ Using shortcuts, determine whether each sentence is a tautology, a contradiction
 \end{earg}
 
 
-\chapter{Partial truth tables}\label{s:PartialTruthTable}
+\chapter{Partial Truth Tables}\label{s:PartialTruthTable}
 
 Sometimes, we do not need to know what happens on every line of a truth table. Sometimes, just a single line or two will do. 
 
