--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -6,7 +6,7 @@
 %	* introduce formally the idea of argument structure, note that some conclusive arguments don't have good structure – move section on validity for special reasons from §4 to §2.
 %	* emphasise connection between validity/conclusiveness and formal inconsistency/consistency
 
-\part{Key notions}
+\part{Key Notions}
 \label{ch.intro}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 
@@ -74,7 +74,7 @@ Highlight the phrase which expresses the conclusion of each of these arguments:
 \end{earg}
 
 
-\chapter{Valid arguments}\label{s:Valid}
+\chapter{Valid Arguments}\label{s:Valid}
 In §\ref{s:Arguments}, we gave a very permissive account of what an argument is. To see just how permissive it is, consider the following:
 	\begin{earg}
 		\item[] There is a bassoon-playing dragon in Rundle Mall.
@@ -332,7 +332,7 @@ Could there be:
 In each case: if so, give an example; if not, explain why not.
 
 
-\chapter{Other logical notions}\label{s:BasicNotions}
+\chapter{Other Logical Notions}\label{s:BasicNotions}
 
 In §\ref{s:Valid}, we introduced the idea of a valid argument. We will want to introduce some more ideas that are important in logic.
 
