--- a/forallx-adl.tex
+++ b/forallx-adl.tex
@@ -28,7 +28,7 @@
 
 \include{forallx-adl-notation}
 \include{forallx-adl-quickreference}
-\renewcommand{\indexname}{Index of defined terms}\printindex % added 2018 Æ
+\renewcommand{\indexname}{Index of Defined Terms}\printindex % added 2018 Æ
 \include{forallx-adl-backmatter}
 
 \end{document}
