--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -30,7 +30,7 @@
 
 {\copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by P.D.\ Magnus, Tim Button, and Antony Eagle. Some rights reserved.
 
-This version of \forallx-Adelaide is current as of \today.
+This version of \forallx\ Adelaide is current as of \today.
 
 \medskip
 
@@ -56,7 +56,7 @@ Typesetting was carried out entirely in \XeLaTeX. The body text is set in Consta
 
 \chapter*{How to Use This Book}
 
-This book has been designed for use in conjunction with the University of Adelaide course \textsc{phil} 1110 \emph{Introduction to Logic}. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
+This book has been designed for use in conjunction with the University of Adelaide courses \textsc{phil} 1110 \emph{Introduction to Logic} and \textsc{phil 1111ol} \emph{Introduction to Logic Online}. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
 	\item \forallx\ is divided into seven chapters, each further divided into sections and subsections. The sections are continuously numbered. \begin{itemize}
 		\item Chapter \ref{ch.intro} gives an overview of how I understand the project of formal logic;
 		\item Chapters \ref{ch.TFL}–\ref{ch.TruthTables} cover sentential or truth-functional logic;
