consolidate appendices, polish notation(!?)

--- a/forallxadl.tex
+++ b/forallxadl.tex
@@ -23,12 +23,12 @@
 \include{forallx-adl-prooftfl}
 \include{forallx-adl-prooffol}
 
-\appendix % don't need to do this by hand Æ
+% \appendix % don't need to do this by hand Æ
 
 
-\include{forallx-adl-notation}
-\include{forallx-adl-quickreference}
-\renewcommand{\indexname}{Index of defined terms}\printindex % added 2018 Æ
+\include{forallx-adl-appendices}
+% \include{forallx-adl-quickreference}
+% \renewcommand{\indexname}{Index of defined terms}\printindex % added 2018 Æ
 \include{forallx-adl-backmatter}
 
 \end{document}
