--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -552,7 +552,6 @@ First,  we allow ourselves to omit the \emph{outermost} brackets of a sentence. 
 
 Second, it can be a bit painful to stare at long sentences with many nested pairs of brackets. To make things a bit easier on the eyes, we shall allow ourselves to use brackets in varied sizes, which sometimes helps in seeing which brackets pair up with each other.
 
-% use square brackets, `[' and `]', instead of rounded ones. So there is no logical difference between `$(P\eor Q)$' and `$\bigl( P\eor Q\bigr) $', for example. 
 
 Combining these two conventions, we can rewrite the unwieldy sentence
 $$(((H \eif I) \eor (I \eif H)) \eand (J \eor K))$$
@@ -560,6 +559,7 @@ rather more readably as follows:
 $$\bigl( (H \eif I) \eor (I \eif H) \bigr) \eand (J \eor K)$$
 The scope of each connective is now much clearer.
 
+There are systems of logic which omit brackets, using so-called `Polish notation'. I discuss this notation briefly in Appendix \ref{app.notation}, p.~\pageref{polish}. 
 
 \keyideas{
 	\item The class of sentences of \TFL\ has a perfectly precise recursive definition that allows us to determine in a step-by-step fashion, for any expression, whether it is a sentence or not. 
