remove hyphen in name

--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -766,8 +766,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 \renewcommand*{\partnumfont}{\normalfont\huge\bfseries\color{orange}}%
 \renewcommand*{\parttitlefont}{\normalfont\HUGE\itshape\bfseries\color{orange}}
 \renewcommand*{\printparttitle}[1]{{\color{orange} \par\hspace{1.5cm}\hrule\vskip\midchapskip\parttitlefont #1\par\hspace{1.5cm}\hrule}}
-
-
+\aliaspagestyle{part}{empty}
 
 \makepagestyle{forallxpage} %TB: design new page style
 %\makeheadrule {forallxpage}{\textwidth}{\normalrulethickness} %TB: put rule beneath page header % Æ removed rule
