--- a/forallx-adl.tex
+++ b/forallx-adl.tex
@@ -22,13 +22,7 @@
 \include{forallx-adl-interpretations}
 \include{forallx-adl-prooftfl}
 \include{forallx-adl-prooffol}
-
-\appendix % don't need to do this by hand Æ
-
-
-\include{forallx-adl-notation}
-\include{forallx-adl-quickreference}
-\renewcommand{\indexname}{Index of Defined Terms}\printindex % added 2018 Æ
+\include{forallx-adl-appendices}
 \include{forallx-adl-backmatter}
 
 \end{document}
